--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@unocss/reset": "^0.58.5",
     "framer-motion": "^11.0.8",
+    "lucide-react": "^0.359.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
